# soccer-intelligence

./: .env.example  .gitignore  .prettierignore  Dockerfile.model  Dockerfile.web  Dockerfile.worker  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml  pages.yml
apps/model-service/: pyproject.toml  requirements.txt
apps/model-service/app/: __init__.py  evaluation.py  main.py  schemas.py  simulation.py
apps/model-service/app/evaluation/: metrics.py
apps/model-service/app/models/: __init__.py  elo.py  ensemble.py  poisson.py
apps/model-service/app/schemas/: __init__.py  api.py
apps/model-service/app/simulation/: __init__.py  tournament.py
apps/model-service/tests/: test_api.py  test_models.py  test_simulation.py
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: backtest-dashboard.tsx  champion-list.tsx  chat-widget.tsx  header.tsx  info-page.tsx  live-match-centre.tsx  market-edge-lab.tsx  match-card.tsx  match-prediction-panel.tsx  metric-chart.tsx  model-chart.tsx  navigation.tsx  performance-chart.tsx  probability-bar.tsx  site-footer.tsx  theme-toggle.tsx  tournament-simulator.tsx
apps/web/lib/: api.ts  chat-answer.ts  client-football-data.ts  data.ts  i18n.ts  live-data.ts  (+5 more)
apps/worker/: eslint.config.mjs  package.json  tsconfig.json
docs/: architecture.md
research/: football_prediction_literature.md
scripts/: build-pages.mjs  update-backtest.mjs  update-elo-snapshot.mjs
(+36 files in other folders)
