[project]
name = "wci-model-service"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "pydantic==2.11.4",
  "numpy==2.0.2",
  "scipy==1.13.1",
  "httpx==0.28.1"
]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
